@@ -46,6 +46,7 @@ lib/mechanize/pluggable_parsers.rb
 lib/mechanize/redirect_limit_reached_error.rb
 lib/mechanize/redirect_not_get_or_head_error.rb
 lib/mechanize/response_code_error.rb
+lib/mechanize/response_read_error.rb
 lib/mechanize/robots_disallowed_error.rb
 lib/mechanize/unsupported_scheme_error.rb
 lib/mechanize/util.rb
